--- a/starter-frontend/package.json
+++ b/starter-frontend/package.json
@@ -1,17 +1,20 @@
 {
   "name": "starter-frontend",
   "version": "1.0.3",
-  "description": "A Laravel back-end & Vue front-end starter kit with registration, login, authentication & logout (laravel/sanctum, Vue router, Vuex, Axios & Interceptor )",
   "private": false,
+  "description": "A Laravel back-end & Vue front-end starter kit with registration, login, authentication & logout (laravel/sanctum, Vue router, Vuex, Axios & Interceptor )",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.8",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "moment": "2.29.1",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "3.2.26",
     "vue-router": "4.0.12",
     "vuex": "4.0.2"
@@ -29,6 +32,7 @@
     "eslint-plugin-vue": "^7.0.0",
     "sass": "^1.58.0",
     "sass-loader": "^10.4.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
